# killer

./: .env.example  .gitignore  Cargo.toml  Dockerfile.build  README.md  build.rs
docs/cross-compilation/: macos.md  windows.md
src/: main.rs  main_simple.rs
src/config/: embedded.rs  loader.rs  mod.rs  schema.rs
src/execution/: async.rs  async_mode.rs  mod.rs  sync.rs
src/security/: destruct.rs  kill_parent.rs  mod.rs
src/utils/: health_monitor.rs  mod.rs  platform.rs  process.rs
src/verification/: fingerprint.rs  hmac.rs  mod.rs  network.rs
tests/: test_async_mode.sh
